Revert "Testimonial slider: remove fixed 300px height clipping the images"
This reverts commit 3742aa6ef6db2580c5f5cad04df105c183eab3de.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -300,7 +300,7 @@ border-color: #2b3990 !important;
   max-width: 288px;
 }
 .test-cards{
-  overflow: hidden;
+  height: 300px;overflow: hidden;
 }
 .vh70{
 height:70vh
